<resources>
    <string name="app_name">Animor</string>
    <string name="olvid_mi_contrase_a">Olvidé mi contraseña</string>
    <string name="adopci_n_de_mascotas">Adopción de mascotas</string>
    <string name="animor">ANIMOR</string>
    <string name="entrar_sin_registrarse">Entrar sin registrarse</string>
    <string name="entrar">Entrar</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="coraz_n_para_favoritos">corazón para favoritos</string>
    <string name="lista_de_animales">Lista de animales</string>
    <string name="boton_para_buscar">boton para buscar</string>
    <string name="especie">Especie</string>
    <string name="sexo">Sexo</string>
    <string name="ciudad">Ciudad</string>
    <string name="nombre_animal">Nombre animal</string>
    <string name="editar_datos_de_usuario">Editar datos de usuario</string>
    <string name="registrar_animal_en_adopci_n">Registrar animal en adopción</string>
    <string name="ver_mis_animales_en_adopci_n">Ver mis animales en adopción</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="e_mail">e-mail</string>
    <string name="tel_fono">Teléfono</string>
    <string name="imagen_del_animal_que_se_da_en_adopci_n">Imagen del animal que se da en adopción</string>
    <string name="bot_n_para_ir_al_perfil">Botón para ir al perfil</string>
    <string name="boton_para_registrar_un_animal_para_adoptar">boton para registrar un animal para adoptar</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="buscar">Buscar</string>
    <string name="dar_en_adopci_n">Dar en adopción</string>
    <string name="adoptado">Adoptado</string>
    <string name="fecha_de_creaci_n">Fecha de creación:</string>
    <string name="dd_mm_aa">dd/mm/aa</string>
    <string name="es_un_animal_muy_bueno">Es un animal muy bueno</string>
    <string name="descripci_n">Descripción</string>
    <string name="cm">cm</string>
    <string name="tama_o">Tamaño</string>
    <string name="a_o_de_nacimiento">Fecha de nacimiento</string>
    <string name="_2000">2000</string>
    <string name="aproximadamente">(Aproximadamente)</string>
    <string name="esterilizado">Esterilizado</string>
    <string name="s_no">Sí/No</string>
    <string name="borrar_animal">Borrar animal</string>
    <string name="editar_animal">Editar animal</string>
    <string name="a_adir_un_animal">Añadir un animal</string>
    <string name="o_contin_a_sin_iniciar_sesi_n">O <u>continúa sin iniciar sesión</u></string>
    <string name="lista_de_favoritos">lista de favoritos</string>
    <string name="lista_de_mis_animales">lista de mis animales</string>
    <string name="logo_animor">logo de la aplicación</string>
    <string name="marcar_como_favorito">marcar como favorito</string>
    <string name="sign_in_in_progress">autenticación en proceso</string>
    <string name="sign_in_error">error a autenticar cuenta</string>
    <string name="sign_in_cancelled">autenticación cancelada</string>
    <string name="sign_in_failed">fallo en la autenticación</string>
    <string name="network_error">error de conexión red</string>
    <string name="unknown_error">error desconocido</string>
    <string name="no_internet_connection">no hay conexión de red</string>
    <string name="oauth_client_id">804843988448-3u7337ptfpn4221ahnrvlp371tmhac04.apps.googleusercontent.com</string>
    <string name="menu">menu desplegable</string>
    <string name="imagen_del_animal">añade la imagen de tu animal</string>
    <string name="app_logo">logo de la aplicación: un gato tumbado sobre la palabra \"Animor\"</string>
    <string name="tabs_navigation">Navegación por pestañas</string>
    <string name="selecciona_opcion">elige la especie</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="volver">Volver</string>
    <string name="ususario">Ususario</string>
    <string name="mensajes">Mensajes</string>
    <string name="usuario">Usuario</string>
    <string name="ultimo_mensaje">Ultimo mensaje</string>
</resources>