<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border"
    android:padding="16dp"
    android:gravity="center_vertical">

    <!-- Imagen redonda del animal -->
    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imgAnimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/primarytwo" />
    </androidx.cardview.widget.CardView>

    <!-- Datos del animal -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_animal"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciudad" />

        <TextView
            android:id="@+id/txtSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo" />

        <TextView
            android:id="@+id/txtSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/especie" />
    </LinearLayout>


    <!-- Icono de favorito -->
    <ImageView
        android:id="@+id/btnFavorite"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/heartvacio"
        android:clickable="true"
    android:contentDescription="@string/marcar_como_favorito" />
</LinearLayout>
