<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border"
    android:padding="16dp">

    <!-- Contenedor CardView para imagen redonda -->
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/imagen_del_animal"
            android:src="@color/primarytwo" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_animal"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/sexo" />

        <TextView
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/ciudad"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/especie" />

    </LinearLayout>

    <!-- Contenedor para el botón de favorito -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="0dp">

        <ImageView
            android:id="@+id/btnFavorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/heartvacio"
            android:clickable="true"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/marcar_como_favorito"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvNearMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:textSize="10sp"
            android:gravity="end"
            android:text="a 0km de ti" />


    </LinearLayout>

</LinearLayout>