<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_inicio"
        android:contentDescription="inicio"
        android:icon="@drawable/gatoinicio"
        android:scaleType="centerCrop"
        android:title="inicio"
        android:titleCondensed="inicio"/>
    <item
        android:id="@+id/nav_favs"
        android:icon="@drawable/heart"
        android:contentDescription="@string/coraz_n_para_favoritos"
        android:scaleType="centerCrop"
        android:title="@string/favoritos"
        android:titleCondensed="favoritos"/>

    <item
    android:id="@+id/nav_listing"
    android:contentDescription="@string/boton_para_registrar_un_animal_para_adoptar"
    android:icon="@android:drawable/ic_input_add"
    android:scaleType="centerCrop"
    android:title="crear animal" />
    <item
        android:id="@+id/nav_animals"
        android:contentDescription="mis animales"
        android:icon="@drawable/pawprint"
        android:scaleType="centerCrop"
        android:titleCondensed="registros"
        android:title="mis registros"/>
    <item
        android:id="@+id/nav_user"
        android:contentDescription="botón para ir a tu cuenta de usuario"
        android:icon="@drawable/user"
        android:scaleType="centerCrop"
        android:title="usuario"
        android:titleCondensed="mi usuario" />

</menu>